fix boxes align

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ html,body{
   }
 
   @media only screen and (max-width: 450px) {
+    .box-container{
+        text-align: center;
+    }
+
     .box{
         width: 98%;
     }
